separate auth logic
